# musig

./: Cargo.toml  README.md
musig/: Cargo.toml  README.md
musig/src/: hash.rs  lib.rs  musig.rs  musig_error.rs  musig_hasher.rs  musig_verifier.rs
musig/tests/: musig_tests.rs
musig_wasm/: Cargo.toml  README.md
musig_wasm/src/: builder.rs  hash_alg.rs  lib.rs  musig_wasm.rs  signature_aggregator.rs  signature_verifier.rs  utils.rs  wasm_formats.rs
musig_wasm/tests/: musig_wasm_tests.rs
src/: lib.rs  musig.rs  musig_hash.rs  musig_wasm.rs  musig_wasm_wrapper.rs  tests.rs
tests/: musig_tests.rs  musig_wasm_tests.rs
